add graphique.R file and test_recouvrement_station.R file ; update description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,12 @@ Imports:
     devtools,
     dplyr,
     ggplot2,
+    plotrix,
     qs,
+    stars,
+    sf,
+    spData,
     targets,
+    tidyverse,
     usethis,
     visNetwork
