update renv.lock + update test_recouvrement_substrat

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,13 @@ Imports:
     ggspatial,
     plotrix,
     qs,
+    readr,
+    rstatix,
     stars,
     sf,
     spData,
     targets,
+    tidyr,
     tidyverse,
     usethis,
     visNetwork
