--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,14 +11,20 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.0
 Imports:
+    ade4,
     devtools,
     dplyr,
     car,
     cowplot,
+    factoextra,
+    FactoMineR,
     ggplot2,
     ggspatial,
+    gplots,
     gridExtra,
+    leaflet,
     multcomp,
+    pgirmess,
     plotrix,
     qs,
     readr,
@@ -30,4 +36,5 @@ Imports:
     tidyr,
     tidyverse,
     usethis,
+    vegan,
     visNetwork
